res/css/views/rooms/_EventTile.scss
/* ... */
.mx_MessagePanel_narrow .mx_ThreadInfo {
    min-width: initial;
    max-width: initial;
    width: initial;
}

$threadInfoLineHeight: calc(2 * $font-12px);

.mx_ThreadInfo_sender {
    font-weight: $font-semi-bold;
    line-height: $threadInfoLineHeight;
}

.mx_ThreadInfo_content {
    text-overflow: ellipsis;
    overflow: hidden;
    white-space: nowrap;
    margin-left: 4px;
    font-size: $font-12px;
    line-height: $threadInfoLineHeight;
    color: $secondary-content;
}

.mx_ThreadInfo_avatar {
    float: left;
    margin-right: 8px;
}

.mx_ThreadInfo_threads-amount {
    font-weight: $font-semi-bold;
    position: relative;
    padding: 0 12px 0 8px;
    white-space: nowrap;
    line-height: $threadInfoLineHeight;
}

.mx_EventTile[data-shape=ThreadsList] {
    --topOffset: 20px;
    --leftOffset: 46px;

    margin: var(--topOffset) 16px var(--topOffset) 0;
    border-radius: 8px;

    display: flex;
    flex-flow: wrap;
    align-items: center;

    &:hover {
        background-color: $system;
    }

    &::after {
        content: "";
        position: absolute;
        left: var(--leftOffset);
        right: 0;
        height: 1px;
        bottom: calc(-1 * var(--topOffset));
        background-color: $quinary-content;
    }

    &::before {
        content: "";
        position: absolute;
        top: 0;
        bottom: 0;
        left: 0;
        right: 0;
        /* enough to cover all sibling elements */
        z-index: 10;
    }

    &:last-child {
        &::after {
            content: unset;
        }
        margin-bottom: 0;
    }

    &:first-child {
        margin-top: 0;
    }

    padding-top: 0;

    .mx_EventTile_avatar {
        top: -4px;
        left: 0;
    }

    .mx_DisambiguatedProfile {
        margin-left: var(--leftOffset) !important;
        flex: 1;
        margin-right: 12px;

        display: inline-flex;
        // not a fan of the magic number here, but I just tweaked
        // the hardcoded value of the current implementation
        max-width: calc(100% - 96px);
    }

    .mx_DisambiguatedProfile_displayName,
    .mx_DisambiguatedProfile_mxid {
        display: block;
        overflow: hidden;
        text-overflow: ellipsis;
    }

    .mx_DisambiguatedProfile_displayName {
        flex: none;
        max-width: 100%;
    }

    .mx_DisambiguatedProfile_mxid {
        flex: 1;
    }

    .mx_EventTile_line {
        width: 100%;
        box-sizing: border-box;
        padding-left: var(--leftOffset) !important;
        padding-bottom: 0;
    }

    .mx_MessageTimestamp {
        position: initial !important;
        max-width: 80px;
        width: auto !important;
    }
}

.mx_ThreadView {
    display: flex;
    flex-direction: column;

    .mx_ThreadView_List {
        flex: 1;
        overflow: scroll;
    }

    .mx_EventTile_roomName {
        display: none;
    }

    .mx_EventTile {
        display: flex;
        flex-direction: column;
        padding-top: 0;

        .mx_EventTile_line {
            padding-left: 0;
            order: 10 !important;
        }

        .mx_MessageTimestamp {
            font-size: $font-10px;
        }

        .mx_ReactionsRow {
            order: 999;
            padding-left: 0;
            padding-right: 0;
        }
    }

    .mx_EventTile[data-layout=bubble] {
        margin-left: 36px;
        margin-right: 36px;

        .mx_EventTile_line.mx_EventTile_mediaLine {
            padding: 0 !important;
            max-width: 100%;

            .mx_MFileBody {
                width: 100%;
            }
        }

        &[data-self=true] {
            align-items: flex-end;

            .mx_EventTile_line.mx_EventTile_mediaLine {
                margin: 0 -13px 0 0; // align with normal messages
            }
        }

        &[data-self=false] {
            .mx_MessageActionBar {
                right: -60px; // smaller overlap, otherwise it'll overflow on the right
            }
        }
    }

    .mx_EventTile[data-layout=group] {
        width: 100%;

        .mx_EventTile_content,
        .mx_HiddenBody,
        .mx_RedactedBody,
        .mx_MPollBody,
        .mx_ReplyChain_wrapper {
            margin-left: 36px;
            margin-right: 8px;

            .mx_EventTile_content,
            .mx_HiddenBody,
            .mx_RedactedBody,
            .mx_MImageBody {
                margin: 0;
            }
        }

        .mx_ReactionsRow {
            margin-left: 36px;
            margin-right: 8px;
        }

        .mx_MessageTimestamp {
            top: 2px !important;
            width: auto;
        }

        .mx_EventTile_senderDetails {
            display: flex;
            align-items: center;
            gap: calc(6px + $selected-message-border-width);

            a {
                flex: 1;
                min-width: none;
                max-width: 100%;
                display: flex;
                align-items: center;

                .mx_DisambiguatedProfile {
                    flex: 1;
                }
            }
        }
    }

    .mx_EventTile_mediaLine {
        padding-left: 36px !important;
        padding-right: 50px;

        .mx_MImageBody {
            margin: 0;
            padding: 0;
        }
    }

    .mx_MessageComposer_sendMessage {
        margin-right: 0;
    }
}

